--- a/public/style.css
+++ b/public/style.css
@@ -9,4 +9,16 @@ body{
 	h2 {
 		text-align: left;
 	}
+	p2 { display:inline;}
+	div {
+	padding: 50px 50px 50px;
+    border: 1px solid black;
+    background-color: white;
+	text-align: center;
+}
+	p{
+		font-size: 25px;
+		padding: 50px 0px 0px 0px;
+	}
+	
 
